# MICRO-TRIX_WINDOWS

./: $null  .env  .env.bak.1758410406  .gitignore  .ports.env  .setup-firewall.ps1  Makefile  activar (si decides)_  apagarlo_  comandos.txt  direcciones.txt  docker-compose.yml  gazebo-gui.sh  hash.py  ports.md  readme (copy) (copia).txt  readme (copy).txt  readme.txt  trix.bat  trix_stack_readme.md  udo wg show  ystemctl stop systemd-resolved
2025_DOCKER-dronui/: Dockerfile  readme.txt  requirements.txt
caddy/: Caddyfile  Dockerfile
compose/: 00-foundation.yml  10-data.yml  20-messaging.yml  30-apps.yml  40-observability.yml  50-edge.yml  60-docs-build.yml  70-robotics.yml
deploy/: hosts.ini  readme.txt  site.yml  ta
esp-docker-jetson-encoder_motor_ui/: .gitmodules  CMakeLists.txt  Dockerfile  entrypoint.sh  idf_component.yml  readme.txt  requirements.txt  sdkconfig.defaults
esp-docker-jetson-encoder_motor_ui/main/: CMakeLists.txt  encoder.cpp  encoder.h  main.cpp  motor.cpp  motor.h  trix_main_loop.cpp  trix_main_loop.h
esp-docker-jetson-encoder_motor_ui/main/main/: CMakeLists.txt  main.cpp  ros.h  ros_blink.cpp
esp-docker-jetson-encoder_motor_ui/main/main/PID_v1/: PID_v1.cpp
gazebo/: Dockerfile  entrypoint.sh  gazebo-gui.sh
git/: Dockerfile
hugo_builder/: Dockerfile
kiali/: Dockerfile  config.yaml
knot_dns/: Dockerfile  knot.conf
kong/: Dockerfile  kong.yml
loki/: loki-config.yaml  promtail-config.yaml
net-sensor/: Dockerfile  agent.py  requirements.txt
node-red/: Dockerfile
open_cv/: Dockerfile
postgres/: Dockerfile  entrypoint.sh  init.sql  servers.json
prometheus/: Dockerfile  prometheus.yml
ros_ws/src/robotio_bridge/: package.xml  setup.py
ros_ws/src/robotio_bridge/launch/: robotio_sim.launch.py
ros_ws/src/robotio_bridge/robotio_bridge/: __init__.py  servo_to_controller.py
ros_ws/src/robotio_bridge/scripts/: run_servo_to_controller
ros_ws/src/robotio_description/: package.xml  setup.cfg  setup.py
ros_ws/src/robotio_description/robotio_description/urdf/: robotio.urdf.xacro
scripts/: dev_down.sh  dev_logs.sh  (+1 more)
(+291 files in other folders)
