<?xml version="1.0"?>
<package format="3">
  <name>robotio_description</name>
  <version>0.0.1</version>
  <description>RobotIO description (URDF/Xacro)</description>
  <maintainer email="you@example.com">jose</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>xacro</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
